--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>Conway's Game of Life</title>
 		<script src="life.js"></script>
 		<style>
 			.grid{
