--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 	</head>
 	<body>
 		<div id="app" class="grid"></div>
+		<canvas id="canvasApp" width="800" height="800"></canvas>
 	</body>
 </html>
